--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,12 @@
   to = "/.netlify/functions/:splat"
   status = 200
 
+# SPA fallback - redirect all routes to index.html for React Router
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [[headers]]
   for = "/*"
   [headers.values]
